@@ -4,6 +4,7 @@ Date: ????
   Changes:
     - Added support for prototype categories in bonuses such as __item__ and __entity__
     - Hid quality machines from showing up on bonuses and fuel values
+    - Worms and other enemies don't get quality (oops!)
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.22
 Date: 2023-12-11
